<resources>
    <string name="app_name">Background</string>
    <string name="ready_to_start">I am ready to start work!</string>
    <string name="start_task">Start</string>
    <string name="loading">Loading...</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="status">Status:</string>
    <string name="enter_you_fullname">Enter you fullname</string>
    <string name="finish">Finish</string>
    <string name="updatetitle">Update User</string>
    <string name="updatebtn">Update</string>
    <string name="addtitle">Add User</string>
    <string name="addbtn">Add</string>
    <string-array name="gender_arrays">
        <item>male</item>
        <item>female</item>
    </string-array>
    <string-array name="status_arrays">
        <item>active</item>
        <item>inactive</item>
        <item>archived</item>
    </string-array>
</resources>